--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
             font-family: system-ui, -apple-system, Segoe UI, Roboto, "Noto Sans JP", sans-serif;
         }
 
+        *,
+        *::before,
+        *::after {
+            box-sizing: border-box;
+        }
+
         body {
             margin: 0;
             padding: 16px;
@@ -215,13 +221,16 @@
             { key: "red", name: "赤", hex: "#ff0000" },
             { key: "orange", name: "オレンジ", hex: "#ff7f00" },
             { key: "yellow", name: "黄", hex: "#ffff00" },
-            { key: "yellowGreen", name: "黄緑", hex: "#9acd32" },
+            { key: "yellowGreen", name: "黄緑", hex: "#bbff00" },
             { key: "green", name: "緑", hex: "#00ff00" },
             { key: "blueGreen", name: "青緑", hex: "#00c4b4" },
             { key: "lightBlue", name: "水色", hex: "#7fdbff" },
             { key: "blue", name: "青", hex: "#0000ff" },
             { key: "purple", name: "紫", hex: "#8b00ff" },
+            { key: "pink", name: "ピンク", hex: "#ff00d0" },
+            { key: "brown", name: "茶色", hex: "#984e2f" },
             { key: "white", name: "白", hex: "#ffffff" },
+            { key: "grey", name: "グレー", hex: "#808080" },
             { key: "black", name: "黒", hex: "#000000" }
         ];
 
